[package]
name = "pe-info"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI to inspect PE/COFF binaries (headers, sections, imports, exports)."
repository = "https://github.com/AuDowty/pe-info"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
